# work-break

./: .cproject  .gitignore  .project  Makefile  README.md  config.ini  icon.rc  icon.res  run.bat  work-break  work-break-run.sh
Debug/: makefile  objects.mk
Debug/src/: subdir.mk
drwright-3.5.0/: AUTHORS  Makefile.am  NEWS  autogen.sh  configure.in  drwright.doap
drwright-3.5.0/src/: Makefile.am  drw-break-window.c  drw-break-window.h  drw-cc-module.c  drw-cc-panel.c  drw-cc-panel.h  drw-monitor.c  drw-selection.c  drw-utils.c  drw-utils.h  drwright-cc.gresource.xml  drwright-panel.glade  drwright.c  drwright.convert  drwright.gresource.xml  drwright.h  gnome-typing-break-panel.desktop.in.in  gsd-typing-break-manager.c  gsd-typing-break-plugin.c  gsd-typing-break-plugin.h  main.c  org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in
src/: about.c  core.c  core.h  fullscreen.c  fullscreen.h  mouse_xy.c  mouse_xy.h  preferences.c  trayicon.c
